--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-component",
     "infinite"
   ],
-  "dependencies": {
-    "react": "~0.13.3"
+  "peerDependencies": {
+    "react": ">=0.13.0 <0.15.0"
   },
   "author": "Roei Erez <roeierez@gmail.com>",
   "license": "MIT",
@@ -26,6 +26,7 @@
   },
   "homepage": "http://roeierez.github.io/react-infinite-carousel/",
   "devDependencies": {
+    "react": "^0.13.3",
     "jsx-loader": "^0.13.2",
     "webpack": "~1.4.3"
   },
